{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 276,
  "lineage": "68449236-2a34-022f-4188-f55b2b973667",
  "resources": [
    {
      "module": "module.jenkins_master",
      "mode": "managed",
      "type": "aws_eip",
      "name": "jenkins_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b92be4ba6d5bc23b",
            "arn": "arn:aws:ec2:ap-south-1:034362062877:elastic-ip/eipalloc-0b92be4ba6d5bc23b",
            "association_id": "eipassoc-0e0e8ab8d071eb969",
            "domain": "vpc",
            "id": "eipalloc-0b92be4ba6d5bc23b",
            "instance": "i-0088a9e51f1eb8c2e",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-07fde3186c0962eeb",
            "private_dns": "ip-10-10-1-5.ap-south-1.compute.internal",
            "private_ip": "10.10.1.5",
            "public_dns": "ec2-43-204-124-56.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.204.124.56",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.jenkins_master.aws_instance.jenkins_master",
            "module.network.aws_security_group.jenkins_sg",
            "module.network.aws_subnet.RSP_IOT_public_subnet",
            "module.network.aws_vpc.RSP_IOT_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins_master",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e35ddab05955cf57",
            "arn": "arn:aws:ec2:ap-south-1:034362062877:instance/i-0088a9e51f1eb8c2e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0088a9e51f1eb8c2e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "mumbaipemkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07fde3186c0962eeb",
            "private_dns": "ip-10-10-1-5.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.5",
            "public_ip": "13.233.162.133",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c64233c8b71b21f0",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-091d2da685ba283a9",
            "tags": {
              "Name": "Jenkins Master"
            },
            "tags_all": {
              "Name": "Jenkins Master"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0947f130f5d2c96ee"
            ]
          },
          "dependencies": [
            "module.network.aws_security_group.jenkins_sg",
            "module.network.aws_subnet.RSP_IOT_public_subnet",
            "module.network.aws_vpc.RSP_IOT_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins_slave",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_slave",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e35ddab05955cf57",
            "arn": "arn:aws:ec2:ap-south-1:034362062877:instance/i-09fd99c3f50117213",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09fd99c3f50117213",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mumbaipemkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0174649ff776fcec6",
            "private_dns": "ip-10-10-2-185.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.2.185",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0dd5039a26cc271bc",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-067ecc7e5a061b4e9",
            "tags": {
              "Name": "Jenkins Slave-1"
            },
            "tags_all": {
              "Name": "Jenkins Slave-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0947f130f5d2c96ee"
            ]
          },
          "dependencies": [
            "module.jenkins_master.aws_eip.jenkins_eip",
            "module.jenkins_master.aws_instance.jenkins_master",
            "module.jenkins_slave.data.template_file.slave_user_data",
            "module.network.aws_security_group.jenkins_sg",
            "module.network.aws_subnet.RSP_IOT_private_subnet",
            "module.network.aws_subnet.RSP_IOT_public_subnet",
            "module.network.aws_vpc.RSP_IOT_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "RSP_IOT_nat_eip",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-084ffdd99d359ac02",
            "arn": "arn:aws:ec2:ap-south-1:034362062877:elastic-ip/eipalloc-084ffdd99d359ac02",
            "domain": "vpc",
            "id": "eipalloc-084ffdd99d359ac02",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-15-207-57-1.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.207.57.1",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "RSP_IOT_igw",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:034362062877:internet-gateway/igw-008d2f97d85371ad9",
            "id": "igw-008d2f97d85371ad9",
            "owner_id": "034362062877",
            "tags": {
              "Name": "RSP-IOT-IGW"
            },
            "tags_all": {
              "Name": "RSP-IOT-IGW"
            },
            "vpc_id": "vpc-0a620263d3fe1f916"
          },
          "dependencies": [
            "module.network.aws_vpc.RSP_IOT_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "RSP_IOT_nat",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-084ffdd99d359ac02",
            "association_id": "eipassoc-004c326d4b656a541",
            "connectivity_type": "public",
            "id": "nat-0fc9064c848552978",
            "network_interface_id": "eni-04733fa6e1e6e28ab",
            "private_ip": "10.10.1.23",
            "public_ip": "15.207.57.1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-091d2da685ba283a9",
            "tags": {
              "Name": "RSP-IOT-NAT-Gateway"
            },
            "tags_all": {
              "Name": "RSP-IOT-NAT-Gateway"
            }
          },
          "dependencies": [
            "module.network.aws_eip.RSP_IOT_nat_eip",
            "module.network.aws_internet_gateway.RSP_IOT_igw",
            "module.network.aws_subnet.RSP_IOT_public_subnet",
            "module.network.aws_vpc.RSP_IOT_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RSP_IOT_private_rt",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:034362062877:route-table/rtb-0ee7edb890557555d",
            "id": "rtb-0ee7edb890557555d",
            "owner_id": "034362062877",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0fc9064c848552978",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RSP-IOT Private Route Table"
            },
            "tags_all": {
              "Name": "RSP-IOT Private Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a620263d3fe1f916"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.RSP_IOT_nat_eip",
            "module.network.aws_internet_gateway.RSP_IOT_igw",
            "module.network.aws_nat_gateway.RSP_IOT_nat",
            "module.network.aws_subnet.RSP_IOT_public_subnet",
            "module.network.aws_vpc.RSP_IOT_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RSP_IOT_public_rt",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:034362062877:route-table/rtb-074ea60bc828628e7",
            "id": "rtb-074ea60bc828628e7",
            "owner_id": "034362062877",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-008d2f97d85371ad9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RSP-IOT Public Route Table"
            },
            "tags_all": {
              "Name": "RSP-IOT Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a620263d3fe1f916"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.RSP_IOT_igw",
            "module.network.aws_vpc.RSP_IOT_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RSP_IOT_private_assoc",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06da6cd3b97a27a7a",
            "route_table_id": "rtb-0ee7edb890557555d",
            "subnet_id": "subnet-067ecc7e5a061b4e9"
          },
          "dependencies": [
            "module.network.aws_eip.RSP_IOT_nat_eip",
            "module.network.aws_internet_gateway.RSP_IOT_igw",
            "module.network.aws_nat_gateway.RSP_IOT_nat",
            "module.network.aws_route_table.RSP_IOT_private_rt",
            "module.network.aws_subnet.RSP_IOT_private_subnet",
            "module.network.aws_subnet.RSP_IOT_public_subnet",
            "module.network.aws_vpc.RSP_IOT_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RSP_IOT_public_assoc",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-039a40c25ac070c3b",
            "route_table_id": "rtb-074ea60bc828628e7",
            "subnet_id": "subnet-091d2da685ba283a9"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.RSP_IOT_igw",
            "module.network.aws_route_table.RSP_IOT_public_rt",
            "module.network.aws_subnet.RSP_IOT_public_subnet",
            "module.network.aws_vpc.RSP_IOT_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_sg",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:034362062877:security-group/sg-0947f130f5d2c96ee",
            "description": "Allow Jenkins traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0947f130f5d2c96ee",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 50000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 50000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "jenkins-sg",
            "name_prefix": "",
            "owner_id": "034362062877",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jenkins-sg"
            },
            "tags_all": {
              "Name": "jenkins-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a620263d3fe1f916"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.RSP_IOT_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "RSP_IOT_private_subnet",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:034362062877:subnet/subnet-067ecc7e5a061b4e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-067ecc7e5a061b4e9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "034362062877",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "RSP-IOT Private Subnet"
            },
            "tags_all": {
              "Name": "RSP-IOT Private Subnet"
            },
            "vpc_id": "vpc-0a620263d3fe1f916"
          },
          "dependencies": [
            "module.network.aws_vpc.RSP_IOT_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "RSP_IOT_public_subnet",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:034362062877:subnet/subnet-091d2da685ba283a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-091d2da685ba283a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "034362062877",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "RSP-IOT Public Subnet"
            },
            "tags_all": {
              "Name": "RSP-IOT Public Subnet"
            },
            "vpc_id": "vpc-0a620263d3fe1f916"
          },
          "dependencies": [
            "module.network.aws_vpc.RSP_IOT_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "RSP_IOT_vpc",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:034362062877:vpc/vpc-0a620263d3fe1f916",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0b19ffbf7b43db02e",
            "default_route_table_id": "rtb-0b3c8e24f6f3db84f",
            "default_security_group_id": "sg-058329a5ca268e603",
            "dhcp_options_id": "dopt-08a39fda6e1ecfaf9",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a620263d3fe1f916",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b3c8e24f6f3db84f",
            "owner_id": "034362062877",
            "tags": {
              "Name": "RSP-IOT"
            },
            "tags_all": {
              "Name": "RSP-IOT"
            }
          }
        }
      ]
    }
  ]
}